# ros-uois

./: .dockerignore  .gitignore  .gitmodules  .pre-commit-config.yaml  CMakeLists.txt  README.md  package.xml  requirements.txt  setup.py
.devcontainer/: devcontainer.json
.docker/: build.sh  uois-ros-realsense.Dockerfile
action/: SceneSegmentation.action
configs/: README.md  sam_query_rgb_onnx.json  sam_rgb.json  uois_rgbd.json
configs/camera/: rs-preset.json
launch/: rgbd_realsense_segment_server.launch
msg/: SegmentationRequest.msg  SegmentationResult.msg  SegmentationState.msg
ros_uois/: base_action_server.py  config.py  config_types.py  scene_processor.py  scene_segmentor.py  utils.py
ros_uois/camera/: __init__.py  camera.py  realsense_camera.py  utils.py
scripts/: client.py  process_rgbd_scene.py  rgbd_segmentation_server.py
